--- a/cv-fgr.tex
+++ b/cv-fgr.tex
@@ -50,7 +50,7 @@
 %\phone{(011) 4842-6857}
 %\fax{(000) 111 1113}
 \email{fgabriel.inbox@gmail.com}
-%\homepage{staff.org.edu/~jsmith}{staff.org.edu/$\sim$jsmith} % The first argument is the url for the clickable link, the second argument is the url displayed in the template - this allows special characters to be displayed such as the tilde in this example
+\homepage{alkor-istar.github.io}{Github portfolio} % The first argument is the url for the clickable link, the second argument is the url displayed in the template - this allows special characters to be displayed such as the tilde in this example
 %\extrainfo{additional information}
 
 %----------------------------------------------------------------------------------------
@@ -60,7 +60,7 @@
 \makecvtitle % Print the CV title
 \section{About me}
 \vspace{0.8em} 
-I'm a Senior Software Engineer with over 10 years of experience designing and building scalable web applications, data pipelines, and distributed systems. I specialize in TypeScript, Node.js, Python, and cloud-native architectures, with a strong focus on backend development, performance optimization, and API design.
+I'm a Senior Software Engineer with over 7 years of experience designing and building scalable web applications, data pipelines, and distributed systems. I specialize in TypeScript, Node.js, Python, and cloud-native architectures, with a strong focus on backend development, performance optimization, and API design.
 
 %----------------------------------------------------------------------------------------
 %	COMPUTER SKILLS SECTION
@@ -68,7 +68,7 @@ I'm a Senior Software Engineer with over 10 years of experience designing and bu
 %\newpage
 \section{Skills}
 
-\cvitem{Programming}{TypeScript, NodeJS, Python, C/C++, PHP, Bash, ReactJS, HTML/CSS, SQL, Postgres, MySql}
+\cvitem{Programming}{TypeScript, NodeJS, Python, C/C++, PHP, ReactJS, LangGraph, SQL, Postgres, HTML/CSS}
 \cvitem{Cloud \& Infra}{AWS (Lambda, DynamoDB, RDS, SNS), Terraform, Docker, Kubernetes, Apache Kafka, Flink, Debezium, Git, CircleCI, QEMU/KVM, CCNA, Github Actions}
 \cvitem{Languages}{Spanish (Native), English (ESOL Examinations - First Certificate B2)}
 
