--- a/cv-fgr.tex
+++ b/cv-fgr.tex
@@ -81,7 +81,7 @@ I'm a Senior Software Engineer with over 7 years of experience designing and bui
 {
 \begin{itemize}
 \item {Developed software for OpenGov's Procurement suite, a government technology company providing cloud solutions for the U.S. public sector}
-\item {Worked on a mature codebase based in Node.js, React, Koa, Apache Kafka, and PostgreSQL}
+\item {Contributed to a mature codebase based in Node.js, React, Koa, Apache Kafka, and PostgreSQL}
 \item {Implemented a permission system that enables confidentiality features}
 \item {Optimized Flink data pipeline using PyFlink and Flink SQL to enhance the suite’s reporting functionality}
 \item {Maintained and improved a microservice infrastructure leveraging Kubernetes and Apache Kafka}
